# sfml_astroids

./: CMakeLists.txt  Makefile  README.md  main.cpp
Collision/: Collider.cpp  Collider.h
Entities/: Object.cpp  Object.h
Entities/Astroid/: Astroid.cpp  Astroid.h
Entities/Bullet/: Bullet.cpp  Bullet.h
Entities/Player/: Player.cpp  Player.h
